--- a/src/app/components/informe-categoria/informe-categoria.component.css
+++ b/src/app/components/informe-categoria/informe-categoria.component.css
@@ -11,6 +11,49 @@
   margin: auto;
 }
 
+.container-scroll {
+  height: 250px;
+}
+
+.filterTable {
+  display: flex;
+  width: auto;
+}
+
+.filterSvgCharts, .filterSvgTable {
+  margin-left: 20px;
+  margin-top: -10px;
+}
+
+.hoverSvgFilter:hover {
+  cursor: pointer;
+}
+
+.item-filters-top {
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+
+.content-filter-item {
+  height: 35px;
+  background-color: rgba(33, 33, 33, 0.8);
+  border-radius: calc(1px * 6);
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-left: 20px;
+  min-width: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.item-filter {
+  margin: 0;
+  font-weight: bold;
+  color: white;
+}
+
 table {
   width: 100%;
   background-color: white;
